--- a/Class Notes/550.420.17-03-31.md
+++ b/Class Notes/550.420.17-03-31.md
@@ -71,5 +71,8 @@ header-includes:
 - $X_1, X_2, \dots X_n$ jointly distributed random variables
 - We'll say they are independent if joint distribution = $\prod\limits_{i = 1}^n$ marginal distribution
 	- $p(x_1, x_2, \dots x_n) = P_{X_1}(x_1)P_{X_2}(x_2) \dots P_{X_n}(x_n)$ $\forall$ $x_1, x_2, \dots x_n$
-- Back to the beginning: 
-	- Lost notes
+- Back to the beginning. Ex:
+- $f(x, y) = xy$ for $0 < x < 2, 0 < y < 1$. $f(x, y) = 0$ otherwise.
+- $f_X(x) = \frac{x}{2}$ for $0 < x < 2$, 0 otherwise.
+- $f_Y(y) = 2y$ for $0 < y < 1$, 0 otherwise.
+- $f_X(x) f_Y(y) = f_{X, Y}(x, y) = \frac{x}{2} 2y = xy$ if $0 < x < 2, 0 < y < 1$. 0 otherwise
