--- a/Class Notes/550.420.17-04-03.md
+++ b/Class Notes/550.420.17-04-03.md
@@ -50,11 +50,12 @@ header-includes:
 			&= \frac{e^{-(\lambda_1 + \lambda_2)}}{u!} \sum\limits_{x_1 = 0}^{u} \frac{u!}{x! (u - x_1)!} \cdot \lambda_1^{x_1} \lambda_2^{u - x_1} \\
 			&= e^{-(\lambda_1 + \lambda_2)} \frac{(\lambda_1 + \lambda_2)^u}{u!}
 		\end{align*}
-			- The pdf of a Poisson($\lambda_1 + \lambda_2$)
-		 	- Note: For formula to be valid, upper limit must be $\infty$
+		- The pdf of a Poisson($\lambda_1 + \lambda_2$)
+	 	- Note: For formula to be valid, upper limit must be $\infty$
 - Suppose $X_1 + X_2 = n$. $P(X_1 = k \vert X_1 + X_2 = n) = ?$
 	-
 	\begin{align*}
-		P(X_1 = k \vert X_1 + X_2 = n) &= \frac{P(X_1 = k, X_1 + X_2 = n)}{e^{-(\lambda_1 + \lambda_2)} \frac{(\lambda_1 + \lambda_2)^n}{n!}} \\
-		&= \frac{e^{-\lambda_1}\frac{\lambda_1^k}{k!} \cdot e^{-\lambda_2} \frac{\lambda_2^{n - k}}{(n - k)!}}{e^{-(\lambda_1 + \lambda_2)} \frac{(\lambda_1 + \lambda_2)^n}{n!}}
+		P(X_1 = k \vert X_1 + X_2 = n) &= \frac{P(X_1 = k, X_2 = n - k)}{e^{-(\lambda_1 + \lambda_2)} \frac{(\lambda_1 + \lambda_2)^n}{n!}} \\
+		&= \frac{e^{-\lambda_1}\frac{\lambda_1^k}{k!} \cdot e^{-\lambda_2} \frac{\lambda_2^{n - k}}{(n - k)!}}{e^{-(\lambda_1 + \lambda_2)} \frac{(\lambda_1 + \lambda_2)^n}{n!}} \\
+		&= \frac{n!}{k!(n - k)!} \Big(\frac{\lambda_1}{\lambda_1 + \lambda_2}\Big)^{k} \Big(\frac{\lambda_2}{\lambda_1 + \lambda_2}\Big)^{n - k} \sim \text{ Binomial}\Big(n, \frac{\lambda_1}{\lambda_1 + \lambda_2}\Big)
 	\end{align*}
