First draft of midterm 2 study guide, added 4/10, small revisions

--- a/Class Notes/550.420.17-03-13.md
+++ b/Class Notes/550.420.17-03-13.md
@@ -24,7 +24,7 @@ $$\mathbf{\frac{P(x - h < X \leq x)}{h} = \frac{F_X(x) - F_X(x - h)}{h}} \righta
 - Bold value is probability mass per unit length, or a probability "density"
 $$P(-\infty < X \leq x) = F_X(x) = \int\limits_{-\infty}^x f(u)du$$
 $$ \text{As } x \rightarrow \infty, 1 = \int\limits_{-\infty}^{\infty} f_X(u)du$$
-- A probability desnity function (pdf) is any function f such that
+- A probability density function (pdf) is any function f such that
     - $f: \mathbb{R} \rightarrow \mathbb{R}, f(x) \geq 0 \forall x \in \mathbb{R}$
     - $\int\limits_{-\infty}^{\infty} f(x)dx = 1$
 - To compute probability mass, $P(a < X \leq b) := \int\limits_a^b f(x)dx$
