--- a/Class Notes/550.420.17-03-27.md
+++ b/Class Notes/550.420.17-03-27.md
@@ -37,7 +37,7 @@ $$f(x) = \frac{x^{\alpha - 1}e^{-\frac{x}{\beta}}}{\beta^{\alpha}\Gamma(\alpha)}
 - $$f(x) = \frac{x^{\alpha - 1}(1 - x)^{\beta - 1}}{\int\limits_0^1 x^{\alpha - 1} (1 - x)^{\beta - 1} dx} $$
 	- for $0 < x < 1$.
 - Where, in fact, $\int\limits_0^1 x^{\alpha - 1} (1 - x)^{\beta - 1} dx = \frac{\Gamma(\alpha) \Gamma(\beta)}{\Gamma(\alpha + \beta)}$ (show this for extra credit)
-- Therefore the pdf is 
+- Therefore the pdf is
 - $$f(x) = \frac{\Gamma(\alpha + \beta)}{\Gamma(\alpha) \Gamma(\beta)} x^{\alpha - 1}(1 - x)^{\beta - 1}$$
 	- for $0 < x < 1$.
 - Exercise: Show $\mathbb{E}(x) = \frac{\alpha}{\alpha + \beta}$
@@ -50,7 +50,7 @@ $$f(x) = \frac{x^{\alpha - 1}e^{-\frac{x}{\beta}}}{\beta^{\alpha}\Gamma(\alpha)}
 	- $$\phi = \frac{e^-\frac{x^2}{2}}{\sqrt{2\pi}} \text{ for } -\infty < x < \infty$$
 	- Find the pdf of $Y = Z^2$
 	- Step 1: Compute the cdf of $Y$ in terms of the cdf of $X$
-	- Step 2: Take a derivative and use use the chain rule
+	- Step 2: Take a derivative and use the chain rule
 	- Step 1
 		- Assume $y \geq 0$
 		-
@@ -80,7 +80,7 @@ $$f(x) = \frac{x^{\alpha - 1}e^{-\frac{x}{\beta}}}{\beta^{\alpha}\Gamma(\alpha)}
 	- Claim
 	- $$f_Y(y) = f_X(g^{-1}(y)) \Big\lvert \frac{d}{dy} g^{-1}(y) \Big\rvert $$
 	- Case 1: $g$ strictly increasing
-		- 
+		-
 		\begin{align*}
 			F_Y(y) &= P(g(X) \leq y) \\
 			&= P(X \leq g^{-1}(y)) \\
@@ -88,7 +88,7 @@ $$f(x) = \frac{x^{\alpha - 1}e^{-\frac{x}{\beta}}}{\beta^{\alpha}\Gamma(\alpha)}
 		\end{align*}
 		- $f_Y(y) = f_X(g^{-1}(y)) \cdot \frac{d}{dy}(g^{-1}(y))$
 	- Case 2: $G$ decreasing
-		- 
+		-
 		\begin{align*}
 			F_Y(y) &= P(g(X) \leq y) \\
 			&= P(X \leq g^{-1}(y)) \\
