--- a/Class Notes/550.420.17-04-14.md
+++ b/Class Notes/550.420.17-04-14.md
@@ -1,7 +1,7 @@
 ---
 title: Intro Prob Lecture Notes
 author:
-    - William Sun 
+    - William Sun
 date:
     - April 14, 2017
 geometry: margin=3cm
@@ -14,7 +14,7 @@ header-includes:
 - Recall: If $Z \sim$ Normal(0, 1) and $X := \mu + \sigma Z$ where $\mu \in \mathbb{R}$, $\sigma > 0$ then $X \sim$ Normal($\mu, \sigma^2$)
 	- Also, as said before, $X \sim$ Normal($\mu, \sigma^2$) $\rightarrow Z = \frac{X - \mu}{\sigma}$
 	- "Normality is closed"
-- Bivariate Normal $X, Y$ with 
+- Bivariate Normal $X, Y$ with
 	- $\mu_X, \mu_Y \in \mathbb{R}$ means
 	- $\sigma_X, \sigma_Y \> 0$ standard deviations
 	- $-1 < \rho < 1$ correlation coefficient
@@ -26,7 +26,7 @@ header-includes:
 - Inverse transformation:
 	- $$Z_1 = \frac{X - \mu_X}{\sigma_X}$$
 	- $$Z_2 = \frac{Y - \mu_Y - \sigma_Y \rho (\frac{X - \mu_X}{\sigma_X})}{\sigma_Y \sqrt{1 - \rho^2}}$$
-- $$J = 
+- $$J =
 \begin{bmatrix}
 	\frac{1}{\sigma_X} & 0 \\
 	* & \frac{1}{\sigma_Y \sqrt{1 - \rho^2}}
@@ -39,7 +39,7 @@ header-includes:
 - Suppose we want to find $f_{Y | X}(y | x) = \frac{f{X, Y}(x, y)}{f_X(x)}$. $\leftarrow$ But how can we identify the numerator for $Y | X = x$? We saw that its full form is very messy
 - Here's an easy way to identify $Y | X = x$:
 	- $Y = \{\mu_Y + \sigma_Y \rho (\frac{x - \mu_X}{\sigma_X} \} + \sigma_Y \sqrt{1 - \rho^2} Z_2)$
-	- The term within curly braces is a constant. So, this is a normal distribution with the constant as a mean, and the term after it as a standard deviation. 
+	- The term within curly braces is a constant. So, this is a normal distribution with the constant as a mean, and the term after it as a standard deviation.
 	- So, we see $Y | X = x \sim$ Normal($\mu_Y + \sigma_Y \rho (\frac{x - \mu_X}{\sigma_X}, \sigma_Y^2 (1 - \rho^2)$)
 
 ## Fisher's F-distribution
@@ -57,13 +57,13 @@ header-includes:
 - So $\lvert J \rvert = \frac{nv}{m}$
 - $$f_{U, V}(u, v) = f_{X, Y}(\frac{nuv}{m}, v) \lvert J \rvert$$
 - $$f_{X, Y}(x, y) = \frac{x^{\frac{n}{2} - 1}e^{-\frac{x}{2}}}{2^{\frac{n}{2}}\Gamma(\frac{n}{2})} \cdot \frac{y^{\frac{m}{2} - 1}e^{-\frac{y}{2}}}{2^{\frac{m}{2}}\Gamma(\frac{m}{2})}$$
-- So, 
+- So,
 \begin{align*}
 	f_{U, V}(u, v) &= \frac{\frac{nuv}{m}^{\frac{n}{2} - 1} \cdot e^{-\frac{nuv}{2m}} \cdot v{\frac{m}{2} - 1} \cdot e^{-\frac{v}{2}} \cdot \frac{n}{m} \cdot v}{2^{\frac{n + m}{2}} \Gamma(\frac{n}{2}) \Gamma(\frac{m}{2})} \\
 	&= \frac{(\frac{n}{m})^{\frac{n}{2}} v^{\frac{n + m}{2} - 1} e^{-v(\frac{nu}{2m} + \frac{1}{2})} u^{\frac{n}{2} - 1}}{2^{\frac{m + n}{2}} \Gamma(\frac{n}{2}) \Gamma(\frac{m}{2})}
-\end{align*} 
+\end{align*}
 - For $u > 0$, (show as an exercise) $$f_U(u) = \frac{n \Gamma(\frac{n + m}{2})}{m \Gamma(\frac{n}{2}) \Gamma(\frac{m}{2})} \cdot \frac{(\frac{nu}{m})^{\frac{n}{2} - 1}}{(1 + \frac{nu}{m})^{\frac{n + m}{2}}}$$
 	- The F-distribution with $n$ Numerator d.f. (degrees of freedom), $m$ Denominator d.f.
-	- Remember: If $W \sim$ Cauchy, $W^2 = F_{1, 1
+	- Remember: If $W \sim$ Cauchy, $W^2 = F_{1, 1}
 - If $Z \sim$ Normal(0, 1) and $X \sim \chi_m^2$ are independent,
 	- $$T = \frac{Z}{\sqrt{\chi / m}} \sim \text{ Student's t-distribution with m d.f.}$$
