--- a/Class Notes/550.420.17-04-05.md
+++ b/Class Notes/550.420.17-04-05.md
@@ -12,11 +12,11 @@ header-includes:
 # Sum of Random Variables
 - Suppose $X, Y$ are jointly discrete with known join pmf. To find the pmf of the sum $X + Y$:
 	- Naive approach: $P(X + Y = u) = \sum\limits_{x + y = u}P(X = x, Y = y)$
-	- Better approach: Partition it into all of the possible values of $X$: 
+	- Better approach: Partition it into all of the possible values of $X$:
 	- $$\sum\limits_x P(X = x, X + Y = u) \rightarrow \sum\limits_x P(X = x, Y = u - x)$$
 		- and, if $X, Y$ are independent, then $$P(X + Y = u) = \sum\limits_x P(X = x)P(Y = u - x)$$
 			- This is the *Convolution formula*
-		- If, further, $X \geq 0, Y \geq 0$ and each are integer-valued, then 
+		- If, further, $X \geq 0, Y \geq 0$ and each are integer-valued, then
 		- $$P(X + Y = u) = \sum\limits_{x = 0}^u P(X = x)P(Y = u - x)$$
 - Examples: Let $X \sim$ binomial($n, p$), $Y \sim$ binomial($m, p$) and $X, Y$ independent. Let $u \in \{0, 1, 2, \dots, m + n\}$
 	- The distribution of the sum is:
@@ -57,11 +57,10 @@ f_{X + Y}(u) &= \frac{d}{du}(F_{X + Y}(u)) \\
 	- *Jacobian method*
 
 # Ordered Statistics
-- $X_1, X_2 \dots X_n \sim$ independent, countinuous random variables all having the same distribution (iidf)
+- $X_1, X_2 \dots X_n \sim$ independent, continuous random variables all having the same distribution (iidf)
 	- $X_{(1)}$ = smallest among $X_1, X_2 \dots X_n$
 	- $\vdots$
 	- $X_{(j)} = j$th smallest among $X_1, X_2 \dots X_n$
 	- $\vdots$
 	- $X_{(n)}$ is the largest
 	- Example: $n = 3$, $x_1 \approx .38, x_2 \approx .214, x_3 \approx .938)$ then $X_{(1)} = x_2, X_{(2)} = x_1, X_{(3)} = x_3$
-	
