last 2 days ( stlil need 4/26)

--- a/Class Notes/550.420.17-05-03.md
+++ b/Class Notes/550.420.17-05-03.md
@@ -54,7 +54,7 @@ $$n! \approx \sqrt{2 \pi n} \cdot (\frac{n}{e})^n$$
 - Interesting application of the Stirling formula: partitions of integer n
 	- We know the answer is $\binom{n - 1 + r}{r}$. Fix $r$, let $n \rightarrow \infty$.  $= \frac{(n - 1 + r)!}{r! (n - 1)!} \approx c(r) n^r$. 
 
-# Makrov Inequality
+# Markov Inequality
 - If $X \geq 0$ random variable, for any constant $a \geq -$ the probability $P(X \geq a) \leq \frac{E(X)}{a}$
 - Chebyshev inequality is a corollary
 - Important concept, subtracting a positive quantity to produce a lower bound
